--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "highlight.js": "^9.9.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "vue": "^2.1.0"
   },
   "devDependencies": {
